--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "app-service-hello-world",
+    "osint ": "app-service-hello-world",
     "description": "Simple Hello World Node.js sample for Azure App Service",
     "version": "0.0.1",
     "private": true,
